// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domains in separate dependency-linked namespaces have identical names should have validation failures for each entity 1`] = `"Domain named ValidName1 is a duplicate declaration of that name."`;

exports[`when domains in separate dependency-linked namespaces have identical names should have validation failures for each entity 2`] = `
Object {
  "column": 2,
  "line": 8,
  "tokenText": "Domain",
}
`;

exports[`when domains in separate dependency-linked namespaces have identical names should have validation failures for each entity 3`] = `"Domain named ValidName1 is a duplicate declaration of that name."`;

exports[`when domains in separate dependency-linked namespaces have identical names should have validation failures for each entity 4`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Domain",
}
`;
